# Search_Engine

./: CMakeLists.txt  CMakePresets.json  README.md  README_EN.md  README_RU.md  Search_Engine.cpp  Search_Engine.h
ConverterJSON/: Converter.cpp  Converter.h  answers.json  request.json
InvertedIndex/: InvertedIndex.cpp
JsonFile/: config.json
SearchServer/: SearchServer.cpp  SearchServer.h
include/: Converter.h  InvertedIndex.h  SearchServer.h  Search_Engine.h
resources/: file1.txt  file2.txt  file3.txt  file4.txt  file5.txt
src/: Converter.cpp  InvertedIndex.cpp  SearchServer.cpp  Search_Engine.cpp
